Making whole grid drawable and added steps indicator.

--- a/index.html
+++ b/index.html
@@ -302,6 +302,30 @@
               </div>
             </div>
 
+            <!-- Progress Stepper -->
+            <div id="progressStepper" class="progress-stepper mb-4">
+              <div class="progress-step" data-step="1">
+                <div class="step-circle">1</div>
+                <div class="step-label">Draw Outline</div>
+              </div>
+              <div class="progress-connector"></div>
+              <div class="progress-step" data-step="2">
+                <div class="step-circle">2</div>
+                <div class="step-label">Select Wall</div>
+              </div>
+              <div class="progress-connector"></div>
+              <div class="progress-step" data-step="3">
+                <div class="step-circle">3</div>
+                <div class="step-label">Generate Plan</div>
+              </div>
+              <div class="progress-connector"></div>
+              <div class="progress-step optional" data-step="4">
+                <div class="step-circle">4</div>
+                <div class="step-label">Add Stairs</div>
+                <div class="optional-badge">Optional</div>
+              </div>
+            </div>
+
             <div class="flex justify-between items-center mb-2">
               <p id="canvasStatus" class="text-sm text-gray-600 flex-grow mr-2">
                 Draw your deck outline. Click near the start point to close the
