--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
   </head>
   <body class="bg-gray-100 p-4 md:p-8">
     <div class="container mx-auto max-w-7xl">
-      <h1 class="text-2xl md:text-3xl font-bold mb-6 text-[#1A2B49]">
-        Deck Calculator
-      </h1>
+      <div class="deck-calculator-header">
+        <h1 class="text-2xl md:text-3xl font-bold text-white">
+          Deck Calculator
+        </h1>
+      </div>
 
       <div id="main-layout-container" class="flex flex-col lg:flex-row gap-8">
         <div id="input-panel" class="lg:w-1/4">
