--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="deckcalculatorstyles.css" />
     <script src="deckCalcjs/app.js" type="module"></script>
   </head>
-  <body class="bg-gray-100 p-4 md:p-8">
+  <body class="bg-gray-200 p-4 md:p-8">
     <div class="container mx-auto max-w-7xl">
       <div class="deck-calculator-header">
         <h1 class="text-2xl md:text-3xl font-bold text-white">
@@ -478,9 +478,10 @@
         </div>
 
             <div id="main-content-panel" class="lg:w-3/4">
+              <div class="info-card">
                 <div
                   id="canvasContainerWrapper"
-                  class="bg-white p-4 rounded-lg shadow relative"
+                  class="relative"
                 >
                   <div id="dimensionInputContainer" class="flex items-center mb-2 hidden">
                     <label class="text-sm text-gray-600 mr-2">Enter length:</label>
@@ -620,6 +621,7 @@
                     </div>
                   </div>
                 </div>
+              </div>
 
                 <div id="bomSection" class="info-card hidden">
                   <div class="flex justify-between items-center mb-4">
@@ -693,7 +695,8 @@
             </div>
 
             <div id="decking-content-panel" class="lg:w-3/4">
-              <div class="coming-soon-content">
+              <div class="info-card">
+                <div class="coming-soon-content">
                 <div class="coming-soon-icon">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
@@ -725,6 +728,7 @@
                   <span class="feature-tag">Waste Estimation</span>
                   <span class="feature-tag">Cost Comparison</span>
                   <span class="feature-tag">Cut Optimization</span>
+                </div>
                 </div>
               </div>
             </div>
@@ -758,7 +762,8 @@
             </div>
 
             <div id="railing-content-panel" class="lg:w-3/4">
-              <div class="coming-soon-content">
+              <div class="info-card">
+                <div class="coming-soon-content">
                 <div class="coming-soon-icon">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <line x1="3" y1="6" x2="21" y2="6"/>
@@ -790,6 +795,7 @@
                   <span class="feature-tag">Hardware List</span>
                   <span class="feature-tag">Gate Planning</span>
                   <span class="feature-tag">Style Options</span>
+                </div>
                 </div>
               </div>
             </div>
@@ -825,7 +831,8 @@
             </div>
 
             <div id="summary-content-panel" class="lg:w-3/4">
-              <div class="coming-soon-content">
+              <div class="info-card">
+                <div class="coming-soon-content">
                 <div class="coming-soon-icon">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
@@ -859,6 +866,7 @@
                   <span class="feature-tag">Timeline Planning</span>
                   <span class="feature-tag">3D Visualization</span>
                   <span class="feature-tag">Permit Docs</span>
+                </div>
                 </div>
               </div>
             </div>
