--- a/index.html
+++ b/index.html
@@ -566,6 +566,16 @@
                         </svg>
                       </button>
                       <button
+                        id="toggleDecompositionBtn"
+                        class="btn btn-secondary text-xs px-3 py-2 leading-tight shadow-lg"
+                        title="Toggle Decomposition View"
+                      >
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
+                          <path fill-rule="evenodd" d="M3 4.25A2.25 2.25 0 015.25 2h9.5A2.25 2.25 0 0117 4.25v2.5A2.25 2.25 0 0114.75 9h-9.5A2.25 2.25 0 013 6.75v-2.5zm2.25-.75a.75.75 0 00-.75.75v2.5c0 .414.336.75.75.75h9.5a.75.75 0 00.75-.75v-2.5a.75.75 0 00-.75-.75h-9.5z" clip-rule="evenodd" />
+                          <path fill-rule="evenodd" d="M3 13.25A2.25 2.25 0 015.25 11h9.5A2.25 2.25 0 0117 13.25v2.5A2.25 2.25 0 0114.75 18h-9.5A2.25 2.25 0 013 15.75v-2.5zm2.25-.75a.75.75 0 00-.75.75v2.5c0 .414.336.75.75.75h9.5a.75.75 0 00.75-.75v-2.5a.75.75 0 00-.75-.75h-9.5z" clip-rule="evenodd" />
+                        </svg>
+                      </button>
+                      <button
                         id="clearCanvasBtn"
                         class="btn btn-secondary text-xs px-3 py-2 leading-tight shadow-lg"
                         title="Clear Canvas"
