Multi-wall Ledger Selection

--- a/index.html
+++ b/index.html
@@ -252,11 +252,11 @@
 
             <!-- Wall Selection Mode Section -->
             <div id="wall-selection-panel" class="panel-section hidden">
-              <h2 class="panel-title">Select Attached Wall</h2>
+              <h2 class="panel-title">Select Wall Segments for Ledger</h2>
               <div class="panel-content">
                 <div class="instruction-box">
-                  <p>Click the wall edge that will be attached to your house or structure.</p>
-                  <p class="mt-2 text-sm">💡 This determines where the ledger board will be placed and affects the structural calculations.</p>
+                  <p>Click wall edge(s) that will be attached to your house or structure. You can select multiple parallel wall segments.</p>
+                  <p class="mt-2 text-sm">💡 All selected walls must be parallel. Click a selected wall to deselect it.</p>
                 </div>
                 
                 <div class="primary-action">
