Modify Plan Working Now

--- a/index.html
+++ b/index.html
@@ -400,10 +400,10 @@
                       </div>
                       <div class="action-buttons">
                         <button type="button" class="btn btn-primary btn-full-width" onclick="regeneratePlan()">
-                          Regenerate Plan
+                          Apply Changes
                         </button>
                         <button type="button" class="btn btn-secondary btn-full-width" onclick="toggleSpecEditor()">
-                          Back to Summary
+                          Cancel
                         </button>
                       </div>
                     </form>
