--- a/index.html
+++ b/index.html
@@ -174,6 +174,14 @@
                       </select>
                     </div>
                     <div>
+                      <label for="postSize" class="form-label">Post Size</label>
+                      <select id="postSize" name="postSize" class="form-select">
+                        <option value="auto" selected>App Decides</option>
+                        <option value="4x4">4x4 Posts (2-ply beams)</option>
+                        <option value="6x6">6x6 Posts (3-ply beams)</option>
+                      </select>
+                    </div>
+                    <div>
                       <label for="joistSpacing" class="form-label"
                         >Joist Spacing</label
                       >
@@ -350,6 +358,14 @@
                           <option value="gh_levellers">GH Levellers + 16x16 Slab</option>
                           <option value="pylex">Pylex 50" Screw Piles</option>
                           <option value="helical">10' Helical Piles</option>
+                        </select>
+                      </div>
+                      <div>
+                        <label for="modifyPostSize" class="form-label">Post Size</label>
+                        <select id="modifyPostSize" name="postSize" class="form-select">
+                          <option value="auto">App Decides</option>
+                          <option value="4x4">4x4 Posts (2-ply beams)</option>
+                          <option value="6x6">6x6 Posts (3-ply beams)</option>
                         </select>
                       </div>
                       <div>
